login and register page are without error

--- a/RazorPageProect.Web/Pages/Auth/Register.cshtml
+++ b/RazorPageProect.Web/Pages/Auth/Register.cshtml
@@ -17,6 +17,6 @@
     <div>
         <input type="submit" value="ورود" />
         <a href="#">فراموشی کلمه عبور</a>
-        <a href="#">ثبت نام</a>
+        <a asp-page="Login">Login</a>
     </div>
 </form>
