--- a/RazorPageProect.Web/Pages/Shared/_LoginLayout.cshtml
+++ b/RazorPageProect.Web/Pages/Shared/_LoginLayout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>@ViewData["Title"]</title>
-    <link rel="stylesheet" type="text/css" href="LoginLayout/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/LoginLayout/css/main.css" />
 </head>
 
 <body>
