--- a/RazorPageProect.Web/Pages/Auth/Register.cshtml
+++ b/RazorPageProect.Web/Pages/Auth/Register.cshtml
@@ -9,11 +9,15 @@
 <form action="">
     <h1>@ViewData["Title"]</h1>
     <div>
-        <input type="text" placeholder="نام کاربری" required="" id="username" />
+        <input type="text" placeholder="UserName" required="" id="username" />
+    </div> 
+    <div>
+        <input type="text" placeholder="FullName" required="" id="username" />
     </div>
     <div>
-        <input type="password" placeholder="کلمه عبور" required="" id="password" />
+        <input type="password" placeholder="Password" required="" id="password" />
     </div>
+   
     <div>
         <input type="submit" value="ورود" />
         <a href="#">فراموشی کلمه عبور</a>
