added front end validation script

--- a/RazorPageProect.Web/Pages/Shared/_LoginLayout.cshtml
+++ b/RazorPageProect.Web/Pages/Shared/_LoginLayout.cshtml
@@ -12,6 +12,7 @@
     <section id="content">
         @RenderBody()
     </section>
+    <partial name="_ValidationScriptsPartial"/>
     @await RenderSectionAsync("Scripts",false)
 </div>
 </body>
