--- a/RazorPageProect.Web/Pages/Auth/Register.cshtml
+++ b/RazorPageProect.Web/Pages/Auth/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RazorPageProect.Web.Pages.Auth.Login
+@model RazorPageProect.Web.Pages.Auth.Register
 
 @{
     Layout = "Shared/_LoginLayout";
@@ -9,13 +9,16 @@
 <form action="">
     <h1>@ViewData["Title"]</h1>
     <div>
-        <input type="text" placeholder="UserName" required="" id="username" />
+        <input type="text" asp-for="UserName" placeholder="UserName" required="" id="username" />
+        <span asp-validation-for="UserName"></span>
     </div> 
     <div>
-        <input type="text" placeholder="FullName" required="" id="username" />
+        <input type="text" asp-for="FullName" placeholder="FullName" required="" id="username" />
+        <span asp-validation-for="FullName"></span>
     </div>
     <div>
-        <input type="password" placeholder="Password" required="" id="password" />
+        <input type="password" asp-for="Password" placeholder="Password" required="" id="password" />
+        <span asp-validation-for="Password"></span>
     </div>
    
     <div>
