register page is successfully created

--- a/RazorPageProect.Web/Pages/Auth/Register.cshtml
+++ b/RazorPageProect.Web/Pages/Auth/Register.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Login";
 }
 
-<form action="">
+<form method="post">
     <h1>@ViewData["Title"]</h1>
     <div>
         <input type="text" asp-for="UserName" placeholder="UserName" required="" id="username" />
