login page client side and server side is completed

--- a/RazorPageProect.Web/Pages/Auth/Register.cshtml
+++ b/RazorPageProect.Web/Pages/Auth/Register.cshtml
@@ -3,7 +3,7 @@
 
 @{
     Layout = "Shared/_LoginLayout";
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Register";
 }
 
 <form method="post">
