--- a/RazorPageProect.Web/Pages/Auth/Login.cshtml
+++ b/RazorPageProect.Web/Pages/Auth/Login.cshtml
@@ -6,13 +6,15 @@
     ViewData["Title"] = "Login";
 }
 
-<form action="">
+<form method="post" >
     <h1>@ViewData["Title"]</h1>
     <div>
-        <input type="text" placeholder="نام کاربری" required="" id="username" />
+        <input type="text" asp-for="UserName" placeholder="نام کاربری" required="" id="username" />
+        <span asp-validation-for="UserName" style="color: red "></span>
     </div>
     <div>
-        <input type="password" placeholder="کلمه عبور" required="" id="password" />
+        <input type="password" asp-for="Password" placeholder="کلمه عبور" required="" id="password" />
+        <span asp-validation-for="Password" style="color: red "></span>
     </div>
     <div>
         <input type="submit" value="ورود" />
